
Jargon 2.4.1b1 Release Notes
================================================================================================

Project: Jargon - IRODS Java API
Date: 07/26/2010
Release Version: 2.4.1b1 - Beta release of Jargon 2.4.1 library
================================================================================================
Requirements

-Jargon depends on Java 1.5+
-Jargon is built using Apache ANT
-Jargon has been tested against IRODS 2.1, IRODS2.2, IRODS2.3, and IRODS2.4

libraries
---------

-gsi-classes.jar (packaged in lib directory)
-junit-4.7.jar (packaged in lib) - used by unit testing classes, not necessary for Jargon deployment
-mockito-all-1.8.4.jar - used for unit testing, not necessary for Jargon deployment
-apache commons-exec-1.0.1.jar (packaged in lib directory) - used by unit testing classes, not necessary for Jargon deployment
-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

*Jargon trunk changes and fixes are merged into this release

----------
*The old Jargon Gui, has been removed

-----------
*Support added for extensible metadata. Extensible metadata may be defined in the extended_icat_data_properties, or may be defined in an arbitrary
source that implements the ExtensibleMetaDataSource interface.  See classes in the org.irods.jargon.core.query package.  This involved significant revision
of GenQuery processing code.

----------
*Partial implementation of GenUpdate functionality, this will require additional work in IRODS2.3 before it is usable.

----------
*fix for Bug 79 -  fix resource validation in IRODSFile.setResource to not use file-based query

----------
* Work in progress to add easier/enhanced query using iquest syntax and returning a resultset object.  This is based on work 