@@ -40,8 +40,8 @@ test2.irods.user=test2
 test2.irods.password=test
 test2.irods.resource=test1-resc2
 
-#test.irods.host=192.168.56.101
-test.irods.host=localhost
+test.irods.host=192.168.56.101
+#test.irods.host=localhost
 test.irods.port=1247
 test.irods.zone=test1
 
